Upgrade to Spring Boot 3 and Java 17 (#394)
* Begin the hard work of upgrading cf-butler to Spring Boot 3 and Java 17
* These changes allow app to compile with -DskipTests flag activated
* Tests are broken for various reasons; need to enhance test infra to mock a connection and interactions with CF API so that database tests can run independent of connection to a foundation
* Logback config changed; wondering whether to boot log4j2 config
* Spring Native which used to be an experimental dependency is now baked in to Spring Boot 3; so removed custom profile from POM
  * There may be other subtle changes to R2DBC API too
* H2 database configuration adjustments
* Adjust DDL for primary key columns - @see https://github.com/h2database/h2database/issues/3326
* Flip DATABASE_TO_UPPER startup flag to true
* Java has nanosecond precision; so update H2 columns to TIMESTAMP(9)
  * @see https://stackoverflow.com/questions/62712093/spring-test-h2-truncates-nanoseconds-during-consequente-queries
* Upgrade Maven wrapper to 3.9.1
* Change how CfEnv is initialized when cloud profile active
* Change setup-java Github Action supported versions for CI+Release flows
* Drop setter-based injection for cfEnv
* Upgrade env var for JRE version for cf push manifest from 11 to 17
* Update R2DBC MySQL provider impl
* Also update R2dbcConfig impl to be more in-line with latest updates to CfEnv
* Updates to versions of software prereqs in docs
* Change groupId for Postgres dependency in Maven profile
* Upgrade to actions/cache@v3